--- a/Rules.conf
+++ b/Rules.conf
@@ -290,6 +290,10 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 ;google
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
 
+;京东历史价格
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
+
+
 ;Tiktok
 (?<=(carrier|account|sys)_region=)CN url 307 JP
 
